# handy

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  merge_check.yml  test.yml
src/handy/: cli.py  config.py
src/handy/commands/: base64_cmd.py  completion.py  decrypt.py  dict_convert.py  phone_cmd.py  time.py  url_cmd.py  version.py
tests/: conftest.py  test_base64.py  test_completion.py  test_decrypt.py  test_dict_convert.py  test_phone.py  test_time.py  test_url.py  test_version.py
