[project]
name = "handy"
version = "0.1.0"
description = "A handy CLI tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.3",
    "pycryptodome>=3.23.0",
    "ujson>=5.12.0",
]

[project.scripts]
handy = "handy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/handy"]
