[project]
name = "handy"
version = "0.1.0"
description = "A handy CLI tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.3",
    "pycryptodome>=3.23.0",
    "ujson>=5.12.0",
]

[project.scripts]
handy = "handy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/handy"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=handy.commands"

[tool.coverage.run]
source = ["handy.commands"]

[tool.coverage.report]
show_missing = true
fail_under = 95
